--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <img src="images/avatar1.jpg" alt="">
             </div>
             <div class="info">
-                <h3>Shreif Yaser</h3>
+                <h3>Alina Deago</h3>
                 <small>Web Devolop</small>
             </div>
             <div class="details">
